--- a/account/Dockerfile
+++ b/account/Dockerfile
@@ -1,13 +1,5 @@
-FROM golang:latest AS builder
-ENV NAME=account
-WORKDIR /app
-COPY . .
-RUN go env -w GOPROXY=https://goproxy.cn,direct
-WORKDIR /app/account
-RUN go mod download
-RUN go build -o account
 FROM alpine:latest
-WORKDIR /app
-COPY --from=builder /app/account/account .
 RUN apk update && apk add --no-cache libc6-compat tzdata
-ENTRYPOINT [ "./account" ]
+WORKDIR /app
+COPY app .
+ENTRYPOINT [ "./app" ]
